--- a/project/build.properties
+++ b/project/build.properties
@@ -1,7 +1,7 @@
 #
 #Mon Jun 14 19:58:05 CEST 2010
 project.name=scaaf
-project.organization=scrworx
+project.organization=srcworx
 project.version=1.0
 sbt.version=0.7.4
 def.scala.version=2.7.7
