--- a/project/build.properties
+++ b/project/build.properties
@@ -5,5 +5,5 @@ project.organization=srcworx
 project.version=1.0
 sbt.version=0.7.4
 def.scala.version=2.7.7
-build.scala.versions=2.8.0.RC7
+build.scala.versions=2.8.0
 project.initialize=false
